# astro

./: .coverage  .dockerignore  .gitignore  Dockerfile  TODO.md  api_server.py  chart.py  chart2.py  chart3.py  chart4.py  elite_analyzer.py  generate_charts.py  lr.py  nixpacks.toml  pyproject.toml  railpack.json  requirements.txt  run.py  spouse_predictor.py
.claude/: settings.json
.github/workflows/: ci.yml
kundali/: TODO.md  __init__.py  ai_astrologer.py  api.py  ashtakavarga.py  avastha.py  benchmarking.py  cache.py  constants.py  dasha.py  decisions.py  dosha_detection.py  interpretations.py  jaimini.py  kundali_matching.py  life_analysis.py  main.py  marriage_date_prediction.py  marriage_scoring.py  muhurtha.py  nakshatra.py  neecha_bhanga.py  north_indian_chart.py  numerology.py  pancha_pakshi.py  printing.py  rectification.py  report_pdf.py  shadbala.py  sky_chart.py  spouse_predictor.py  tajika.py  timings.py  transit_calendar.py  upagrahas.py  utils.py  vimshopak_bala.py  yoga_detection.py
kundali/outputs/: shri_kundali_report.txt  shri_kundali_report_spouse_prediction.txt
kundali/spouse/: __init__.py  analysis.py  (+3 more)
spouse_predictor/: COMPLETION_SUMMARY.md
tests/: conftest.py  test_api.py  test_benchmarking.py  test_cache.py  test_decisions.py  test_kundali.py  test_printing.py  test_report_pdf.py  test_utils.py
vedic_kundali/: analysis.py  ashtakavarga.py  astro_utils.py  constants.py  dasha.py  divisional.py  doshas.py  kundali.py  timings.py  yogas.py
vedic_kundali.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+7 files in other folders)
