[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedic-kundali"
version = "2.0.0"
description = "Vedic astrology calculation and prediction engine"
requires-python = ">=3.9"
dependencies = [
    "pyswisseph>=2.10",
    "geopy>=2.4",
    "timezonefinder>=6.0",
    "pytz>=2022.1",
]

[project.optional-dependencies]
transits = ["astropy>=5.0"]
server = ["fastapi>=0.100", "uvicorn>=0.20"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
kundali = "kundali.main:main"

[tool.setuptools.packages.find]
include = ["kundali*"]

[tool.setuptools.package-data]
kundali = ["*.se1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
